Adds the new category entity and controller. There was a bunch of jacoco exclusions that have been removed and tests are added instead.
