# src/main/resources/openapi.yaml
@@ -1,19 +1,80 @@
 openapi: 3.0.1
 info:
   title: Incident
-  contact: { }
+  contact: {}
   license:
     name: MIT License
     url: https://opensource.org/licenses/MIT
   version: "2.0"
 servers:
-  - url: http://localhost:8080
-    description: Generated server url
+- url: http://localhost:8080
+  description: Generated server url
 paths:
+  /category:
+    get:
+      tags:
+      - Category resources
+      summary: Fetch all categories
+      operationId: getAllCategories
+      responses:
+        "200":
+          description: All categories returned
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CategoryDTO'
+        "204":
+          description: No content
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CategoryDTO'
+        "400":
+          description: Bad Request
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "500":
+          description: Internal Server Error
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
+    post:
+      tags:
+      - Category resources
+      summary: Create category
+      operationId: postCategory
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CategoryPost'
+        required: true
+      responses:
+        "201":
+          description: Category created
+        "400":
+          description: Bad Request
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "500":
+          description: Internal Server Error
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
   /api/sendincident:
     post:
       tags:
-        - Incident resources
+      - Incident resources
       summary: Send a single Incident
       operationId: sendIncident
       requestBody:
@@ -41,24 +102,138 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/Problem'
+  /category/{id}:
+    get:
+      tags:
+      - Category resources
+      summary: Fetch category by ID
+      operationId: getCategoryById
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int32
+      responses:
+        "200":
+          description: Category returned
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/CategoryDTO'
+        "404":
+          description: Not found
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "400":
+          description: Bad Request
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "500":
+          description: Internal Server Error
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
+    delete:
+      tags:
+      - Category resources
+      summary: Delete a category by id
+      operationId: deleteCategoryById
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int32
+      responses:
+        "204":
+          description: Category deleted
+        "404":
+          description: Not found
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "400":
+          description: Bad Request
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "500":
+          description: Internal Server Error
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
+    patch:
+      tags:
+      - Category resources
+      summary: Update a category
+      operationId: patchCategory
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int32
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CategoryPatch'
+        required: true
+      responses:
+        "200":
+          description: Category was updated
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/CategoryDTO'
+        "404":
+          description: Not found
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "400":
+          description: Bad Request
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "500":
+          description: Internal Server Error
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
   /api/statusupdate:
     patch:
       tags:
-        - Incident resources
+      - Incident resources
       summary: Update the status for a specific incident
       operationId: updateIncidentStatus
       parameters:
-        - name: id
-          in: query
-          required: true
-          schema:
-            type: string
-        - name: status
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
+      - name: id
+        in: query
+        required: true
+        schema:
+          type: string
+      - name: status
+        in: query
+        required: true
+        schema:
+          type: integer
+          format: int32
       responses:
         "400":
           description: Bad Request
@@ -77,7 +252,7 @@ paths:
   /api/validstatuses:
     get:
       tags:
-        - Valid list resources
+      - Valid list resources
       summary: Get a list of valid statuses
       operationId: getValidstatuses
       responses:
@@ -102,7 +277,7 @@ paths:
   /api/validcategories:
     get:
       tags:
-        - Valid list resources
+      - Valid list resources
       summary: Get a list of valid categories
       operationId: getValidCategories
       responses:
@@ -127,7 +302,7 @@ paths:
   /api/validcategories/oep:
     get:
       tags:
-        - Valid list resources
+      - Valid list resources
       summary: Get a list of valid categories in oep format
       operationId: getValidOepCategories
       responses:
@@ -152,20 +327,20 @@ paths:
   /api/setincidentfeedback:
     get:
       tags:
-        - Incident resources
+      - Incident resources
       summary: Set type of errand
       operationId: setIncidentFeedback
       parameters:
-        - name: errandid
-          in: query
-          required: true
-          schema:
-            type: string
-        - name: feedback
-          in: query
-          required: true
-          schema:
-            type: string
+      - name: errandid
+        in: query
+        required: true
+        schema:
+          type: string
+      - name: feedback
+        in: query
+        required: true
+        schema:
+          type: string
       responses:
         "400":
           description: Bad Request
@@ -184,91 +359,97 @@ paths:
   /api/listincidents:
     get:
       tags:
-        - Incident resources
+      - Incident resources
       summary: Get list of incidents
       operationId: getAllIncidents
       parameters:
-        - name: offset
-          in: query
-          required: false
-          schema:
-            type: integer
-            format: int32
-        - name: limit
-          in: query
-          required: false
-          schema:
-            type: integer
-            format: int32
+      - name: offset
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+      - name: limit
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
       responses:
+        "400":
+          description: Bad Request
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "500":
+          description: Internal Server Error
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
         "200":
           description: Successful Operation
           content:
             '*/*':
               schema:
                 $ref: '#/components/schemas/IncidentListResponse'
-        "400":
-          description: Bad Request
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Problem'
-        "500":
-          description: Internal Server Error
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Problem'
   /api/internal/oep/status/{externalCaseId}:
     get:
       tags:
-        - Incident resources
+      - Incident resources
       summary: Get status for a OeP incident
       operationId: getStatusForOeP
       parameters:
-        - name: externalCaseId
-          in: path
-          required: true
-          schema:
-            type: string
+      - name: externalCaseId
+        in: path
+        required: true
+        schema:
+          type: string
       responses:
-        "200":
-          description: Successful Operation
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/IncidentOepResponse'
-        "400":
-          description: Bad Request
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Problem'
-        "500":
-          description: Internal Server Error
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Problem'
         "404":
           description: Not Found
           content:
             '*/*':
               schema:
                 $ref: '#/components/schemas/Problem'
+        "400":
+          description: Bad Request
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "500":
+          description: Internal Server Error
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "200":
+          description: Successful Operation
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/IncidentOepResponse'
   /api/getincident/{id}:
     get:
       tags:
-        - Incident resources
+      - Incident resources
       summary: Get a single incident
       operationId: getIncident
       parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
       responses:
+        "404":
+          description: Not Found
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
         "200":
           description: Successful Operation
           content:
@@ -287,16 +468,10 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/Problem'
-        "404":
-          description: Not Found
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Problem'
   /api-docs:
     get:
       tags:
-        - API
+      - API
       summary: OpenAPI
       operationId: getApiDocs
       responses:
@@ -311,12 +486,58 @@ paths:
       x-wso2-mutual-ssl: Optional
 components:
   schemas:
+    CategoryPost:
+      required:
+      - forwardTo
+      - label
+      - title
+      type: object
+      properties:
+        title:
+          type: string
+          description: Category name
+          example: GANGCYKELVAG
+        label:
+          type: string
+          description: Description of the category
+          example: Gång- och cykelväg
+        forwardTo:
+          type: string
+          description: The E-mail where the incidents are forwarded to
+          example: nowhere@nowhere.com
+    Problem:
+      type: object
+      properties:
+        instance:
+          type: string
+          format: uri
+        type:
+          type: string
+          format: uri
+        parameters:
+          type: object
+          additionalProperties:
+            type: object
+        status:
+          $ref: '#/components/schemas/StatusType'
+        detail:
+          type: string
+        title:
+          type: string
+    StatusType:
+      type: object
+      properties:
+        statusCode:
+          type: integer
+          format: int32
+        reasonPhrase:
+          type: string
     AttachmentRequest:
       required:
-        - category
-        - extension
-        - file
-        - mimeType
+      - category
+      - extension
+      - file
+      - mimeType
       type: object
       properties:
         category:
@@ -342,9 +563,9 @@ components:
       description: Attachments
     IncidentSaveRequest:
       required:
-        - category
-        - description
-        - personId
+      - category
+      - description
+      - personId
       type: object
       properties:
         personId:
@@ -392,33 +613,39 @@ components:
           type: string
         incidentId:
           type: string
-    Problem:
+    CategoryDTO:
       type: object
       properties:
-        instance:
-          type: string
-          format: uri
-        type:
-          type: string
-          format: uri
-        parameters:
-          type: object
-          additionalProperties:
-            type: object
-        status:
-          $ref: '#/components/schemas/StatusType'
-        detail:
-          type: string
+        categoryId:
+          type: integer
+          description: Category ID
+          format: int32
+          example: 4
         title:
           type: string
-    StatusType:
+          description: Category name
+          example: GANGCYKELVAG
+        label:
+          type: string
+          description: Description of the category
+          example: Gång- och cykelväg
+        forwardTo:
+          type: string
+          description: The E-mail where the incidents are forwarded to
+          example: nowhere@nowhere.com
+      description: Category model
+    CategoryPatch:
       type: object
       properties:
-        reasonPhrase:
+        title:
           type: string
-        statusCode:
-          type: integer
-          format: int32
+          description: Category title
+        label:
+          type: string
+          description: Category label
+        forwardTo:
+          type: string
+          description: The E-mail where the incidents are forwarded to
     ValidStatusResponse:
       type: object
       properties:
@@ -510,4 +737,4 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/AttachmentResponse'
-  securitySchemes: { }
+  securitySchemes: {}
